Added a new method in CostMasterRepository and Call the method in DailyAttendanceController Action and in DataBase table in DailyAttendance Added new column

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ConstructionApplication.ViewModels.CostMasterVm.CostMasterVm
 
-<h4>CostMasterVm</h4>
+<h4>Cost Master</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
