--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Add"><b>CostMaster</b></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Add"><b>Cost Master</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Add"><b>Daily Attendance</b></a>
                         </li>
                     </ul>
                 </div>
