Added a new action in CostMasterController and using JavaScript Ajax in ViewPage

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Add"><b>Daily Attendance</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="AddUsingAjax"><b>Daily Attendance Using Ajax</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
