Added a new AttendanceDetailsController in Construction Application and in DailyAttendanceController create a Attendance Report on UI

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -32,7 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Add"><b>Daily Attendance</b></a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Index"><b>Attendance Report</b></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="AddUsingAjax"><b>Daily Attendance Using Ajax</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AttendanceDetails" asp-action="Add"><b>Attendance Details</b></a>
                         </li>
                     </ul>
                 </div>
