--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
@@ -10,20 +10,20 @@
 
             <div class="form-group">
                 <label asp-for="Date" class="control-label"><b>Date</b></label>
-                <input asp-for="Date" class="form-control" />
+                <input asp-for="Date" class="form-control" value="@DateTime.Now.ToString(" yyyy-MM-dd")" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <br/>
             <div class="form-group">
                 <label asp-for="MasterMasonCount" class="control-label"><b>Master Mason Count</b></label>
-                <input asp-for="MasterMasonCount" class="form-control" />
+                <input asp-for="MasterMasonCount" class="form-control" value="3" />
                 <span asp-validation-for="MasterMasonCount" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group row">
                 <div class="col-md-6">
                     <label asp-for="LabourCount" class="control-label"><b>Total Labour Count</b></label>
-                    <input asp-for="LabourCount" class="form-control123" />
+                    <input asp-for="LabourCount" class="form-control" value="5" />
                     <span asp-validation-for="LabourCount" class="text-danger"></span>
                 </div>
                 <div class="col-md-4 d-flex align-items-center" style="margin-left: 10px;">
