--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate1.html"><b>Calculate1</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate2.html"><b>Calculate2</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
