Added a new CalculateWithAnonymous.html and CalculateWithAnonymous.html in Html&JsDemo Project

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
@@ -29,7 +29,13 @@
                             <a class="nav-link text-dark" href="https://localhost:7038/Calculate1.html"><b>Calculate1</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate2.html"><b>Calculate2</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate2.html"><b>CalculateWithIfStatement</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithSwitch3.html"><b>CalculateWithSwitch3</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithAnonymous.html"><b>CalculateWithAnonymous</b></a>
                         </li>
                     </ul>
                 </div>
