Added a new DivShowHideDemo.html and DivShowHideDemo-UsingJQuery.html page in Html&JsDemo project

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithAnonymous.html"><b>CalculateWithAnonymous</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo.html"><b>DivShowHideDemo</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo-UsingjQuery.html"><b>DivShowHideDemo-UsingjQuery</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
