Added a new CustomerController in Html&JsDemo and insert data in Customer table in database

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Shared/_Layout.cshtml
@@ -26,22 +26,25 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index"><b>Customer</b></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" href="https://localhost:7038/Calculate1.html"><b>Calculate1</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate2.html"><b>CalculateWithIfStatement</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/Calculate2.html"><b>Calculate With If Statement</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithSwitch3.html"><b>CalculateWithSwitch3</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithSwitch3.html"><b>Calculate With Switch</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithAnonymous.html"><b>CalculateWithAnonymous</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/CalculateWithAnonymous.html"><b>Calculate With Anonymous</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo.html"><b>DivShowHideDemo</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo.html"><b>Div Show Hide Demo</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo-UsingjQuery.html"><b>DivShowHideDemo-UsingjQuery</b></a>
+                            <a class="nav-link text-dark" href="https://localhost:7038/DivShowHideDemo-UsingjQuery.html"><b>Div Show Hide Demo Using jQuery</b></a>
                         </li>
                     </ul>
                 </div>
