Added Date range in Index.cshtml now data come on UI based on date filter and changed date format

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
@@ -15,15 +15,15 @@
             </div>
             <br/>
             <div class="form-group">
-                <label asp-for="MasterMasonCount" class="control-label"><b>Total Master Mason</b></label>
-                <input asp-for="MasterMasonCount" class="form-control" />
-                <span asp-validation-for="MasterMasonCount" class="text-danger"></span>
+                <label asp-for="TotalMasterMason" class="control-label"><b>Total Master Mason</b></label>
+                <input asp-for="TotalMasterMason" class="form-control" />
+                <span asp-validation-for="TotalMasterMason" class="text-danger"></span>
             </div>
             <br/>
             <div class="form-group">
-                <label asp-for="LabourCount" class="control-label"><b>Total Labour</b></label>
-                <input asp-for="LabourCount" class="form-control" />
-                <span asp-validation-for="LabourCount" class="text-danger"></span>
+                <label asp-for="TotalLabour" class="control-label"><b>Total Labour</b></label>
+                <input asp-for="TotalLabour" class="form-control" />
+                <span asp-validation-for="TotalLabour" class="text-danger"></span>
             </div>
             <br/>
             <div class="form-group">
