--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ConstructionApplication.ViewModels.DailyAttendance.DailyAttendanceVm>
 
-<h1>Atendance Report</h1>
+<h1>Attendance Report</h1>
 <br/>
 <html>
     <body>
@@ -15,8 +15,7 @@
         <table border="3px" class="table">
             <tr class="table1">
                 <td><b>Date</b></td>
-                <td><b>Master Mason Count</b></td>
-                <td><b>Total Labour Count</b></td>
+                <td><b>Total Count(Master Mason + Labour)</b></td>
                 <td><b>Total Master Mason Amount</b></td>
                 <td><b>Total Labour Amount</b></td>
                 <td><b>Total Amount</b></td>
@@ -26,8 +25,7 @@
             {
                 <tr class="table1">
                 <td><b>@dailyAttendanceVm.Date.ToString("dd-MMMM-yyyy")</b></td>
-                <td><b>@dailyAttendanceVm.TotalMasterMason</b></td>
-                <td><b>@dailyAttendanceVm.TotalLabour</b></td>
+                <td><i>@dailyAttendanceVm.TotalCount</i></td>
                 <td><b>@dailyAttendanceVm.MasterMasonAmount</b></td>
                 <td><b>@dailyAttendanceVm.LabourAmount</b></td>
                 <td><b>@dailyAttendanceVm.TotalAmount</b></td>
