Changed Total Count data bold into italic on UI

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -25,7 +25,7 @@
             {
                 <tr class="table1">
                 <td><b>@dailyAttendanceVm.Date.ToString("dd-MMMM-yyyy")</b></td>
-                <td><i>@dailyAttendanceVm.TotalCount (@dailyAttendanceVm.TotalMasterMason + @dailyAttendanceVm.TotalLabour)</i></td>
+                <td><b>@dailyAttendanceVm.TotalCount</b><i>(@dailyAttendanceVm.TotalMasterMason + @dailyAttendanceVm.TotalLabour)</i></td>
                 <td><b>@dailyAttendanceVm.MasterMasonAmount</b></td>
                 <td><b>@dailyAttendanceVm.LabourAmount</b></td>
                 <td><b>@dailyAttendanceVm.TotalAmount</b></td>
