Added date range validation in the controller's Index action for the user on UI

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -4,7 +4,7 @@
 <br/>
 <html>
     <body>
-
+        <span class="text-danger"> <b> @ViewBag.errorMessage </b> </span>
         <form method="get" asp-action="Index">
             <label><b>Range:</b></label>
             <input type="date" name="DateFrom" value="@ViewBag.DateFrom" />
