--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -4,13 +4,14 @@
 <br/>
 <html>
     <body>
-        <span class="text-danger"> <b> @ViewBag.errorMessage </b> </span>
-        <form method="get" asp-action="Index">
+        @* <span class="text-danger"> <b> @ViewBag.errorMessage </b> </span> *@
+        <form method="get" asp-action="Index" onsubmit="return validateDates()">
             <label><b>Range:</b></label>
             <input type="date" name="DateFrom" value="@ViewBag.DateFrom" />
             <input type="date" name="DateTo" value="@ViewBag.DateTo" />
             <button type="submit" class="btn btn-primary">Go</button>
         </form>
+        <span id="errorMessage" class="text-danger"></span>
         <br/>
         <table border="3px" class="table">
             <tr class="table1">
@@ -32,5 +33,32 @@
                 </tr>
             }
         </table>
+        <script>
+        function validateDates() {
+            // Get the date values
+            var dateFrom = document.getElementById("DateFrom").value;
+            var dateTo = document.getElementById("DateTo").value;
+            var errorMessage = document.getElementById("errorMessage");
+            errorMessage.innerHTML = "";
+
+            // Convert date strings to Date objects
+            var currentDate = new Date().toISOString().split('T')[0];
+            var fromDate = dateFrom ? new Date(dateFrom) : null;
+            var toDate = dateTo ? new Date(dateTo) : null;
+
+            // Check if DateFrom is greater than DateTo (when both are provided)
+            if (fromDate && toDate && fromDate > toDate) {
+                errorMessage.innerHTML = "FROM DATE cannot be greater than TO DATE.";
+                return false;
+            }
+
+            // Check both DateFrom and DateTo is in the future
+            if (dateTo && dateFrom > currentDate || dateFrom && dateTo > currentDate) {
+                errorMessage.innerHTML = "FROM DATE and TO DATE cannot be in the future.";
+                return false;
+            }
+            return true;
+        }
+        </script>
     </body>
 </html>
