--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AttendanceDetails" asp-action="Add"><b>Attendance Details</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Add"><b>Material Purchase</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
