--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -8,30 +8,25 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <span class="text-success"> <b> @ViewBag.SuccessMessage </b> </span>
 
-            <div class="form-group">
+            <div class="form-group" style="width: 60%;">
                 <label asp-for="SupplierId" class="control-label"><b>Supplier/Vendor</b></label>
                 @Html.DropDownListFor(model => model.SupplierId, (SelectList)ViewBag.Supplier, "-- Select Material --", new { @class = "form-control" })
                 <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
-                <div class="d-flex align-items-center" style="margin-left: 10px;">
-                    <div class="mr-10">
-                        <label asp-for="MaterialId" class="control-label"><b>Materials</b></label>
-                        @Html.DropDownListFor(model => model.MaterialId, (SelectList)ViewBag.Materials, "-- Select Material --", new { @class = "form-control" })
-                        <span asp-validation-for="MaterialId" class="text-danger"></span>
-                    </div>
-                    <a href="#" id="getUnitData" class="btn btn-link"><b>Get Unit Data</b></a>
-                </div>
+            <div class="form-group" style="width: 60%;">
+                <label asp-for="MaterialId" class="control-label"><b>Materials</b></label>
+                @Html.DropDownListFor(model => model.MaterialId, (SelectList)ViewBag.Materials, "-- Select Material --", new { @class = "form-control" })
+                <span asp-validation-for="MaterialId" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            <div class="form-group" style="width: 60%;">
                 <label asp-for="BrandId" class="control-label"><b>Brands</b></label>
                 @Html.DropDownListFor(model => model.BrandId, (SelectList)ViewBag.Brands, "-- Select Material --", new { @class = "form-control" })
                 <span asp-validation-for="BrandId" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            <div class="form-group" style="width: 60%;">
                 <label asp-for="UnitOfMeasure" class="control-label"><b>Unit Of Measure</b></label>
                 <input asp-for="UnitOfMeasure" id="unitOfMeasure" class="form-control" readonly />
                 <span asp-validation-for="UnitOfMeasure" class="text-danger"></span>
@@ -39,11 +34,11 @@
             <br />
             <div class="form-group">
                 <label asp-for="UnitPrice" class="control-label"><b>Unit Price</b></label>
-                <input asp-for="UnitPrice" id="unitPrice" class="form-control" />
+                <input asp-for="UnitPrice" id="unitPrice" class="form-control" style="width: 30%;" />
                 <span asp-validation-for="UnitPrice" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            <div class="form-group" style="width: 60%;">
                 <label asp-for="Date" class="control-label"><b>Date</b></label>
                 <input asp-for="Date" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" type="datetime-local" />
                 <span asp-validation-for="Date" class="text-danger"></span>
@@ -51,17 +46,17 @@
             <br />
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"><b>Quantity</b></label>
-                <input asp-for="Quantity" id="quantity" class="form-control" />
+                <input asp-for="Quantity" id="quantity" class="form-control" style="width: 30%;" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
                 <label asp-for="MaterialCost" class="control-label"><b>Material Cost</b></label>
-                <input asp-for="MaterialCost" id="materialCost" class="form-control" readonly />
+                <input asp-for="MaterialCost" id="materialCost" class="form-control" style="width: 30%;" readonly />
                 <span asp-validation-for="MaterialCost" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            <div class="form-group" style="width: 55%;">
                 <div class="d-flex align-items-center" style="margin-left: 10px;">
                     <div class="mr-3">
                         <label asp-for="DeliveryCharge" class="control-label"><b>Delivery Charge</b></label>
@@ -72,9 +67,9 @@
                 </div>
             </div>
             <br/>
-            <div class="form-group">
+            <div class="form-group" >
                 <label><b>Total Amount</b></label>
-                <input asp-for="TotalAmount" id="totalAmount" class="form-control" readonly />
+                <input asp-for="TotalAmount" id="totalAmount" class="form-control" style="width: 30%;" readonly />
             </div>
             <br/>
             <div class="form-group">
@@ -108,7 +103,7 @@
     }
     document.getElementById('calculate').addEventListener('click', calculateTotal);
 
-    $('#getUnitData').click(function (e) {
+    $('#MaterialId').change(function (e) {
         
         var materialId = $('#MaterialId').val();
 
