--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -2,9 +2,13 @@
 
 <h1>Attendance Report</h1>
 <br/>
+<a href="https://localhost:7212/DailyAttendance/Add" style="margin-left: 1000px;"><b>Add New Daily Attendance</b></a>
+<br />
+<br />
+<a href="https://localhost:7212/DailyAttendance/AddUsingAjax" style="margin-left: 900px;"><b>Add New Daily (Attendance Using AJAX)</b></a>
 <html>
     <body>
-        @* <span class="text-danger"> <b> @ViewBag.errorMessage </b> </span> *@
+    <br />
         <form method="get" asp-action="Index" onsubmit="return validateDates()">
             <label><b>Range:</b></label>
             <input type="date" name="DateFrom" value="@ViewBag.DateFrom" />
