--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@* @{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+ *@
+
+@* <span><img src="/UploadedImage/Construction.png" style="width: 1200px; height: 500px;" /></span>
+ *@
