--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ConstructionApplication.ViewModels.MaterialPurchaseVm.MaterialPurchaseVm
 
 <h4>Material Purchase</h4>
-<hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Add">
@@ -9,15 +9,15 @@
             <span class="text-success"> <b> @ViewBag.SuccessMessage </b> </span>
 
             <div class="form-group" style="width: 60%;">
-                <label asp-for="SupplierId" class="control-label"><b>Supplier/Vendor</b></label>
-                @Html.DropDownListFor(model => model.SupplierId, (SelectList)ViewBag.Supplier, "-- Select Material --", new { @class = "form-control" })
-                <span asp-validation-for="SupplierId" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"><b>Date</b></label>
+                <input asp-for="Date" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" type="datetime-local" />
+                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
-                <label asp-for="MaterialId" class="control-label"><b>Materials</b></label>
-                @Html.DropDownListFor(model => model.MaterialId, (SelectList)ViewBag.Materials, "-- Select Material --", new { @class = "form-control" })
-                <span asp-validation-for="MaterialId" class="text-danger"></span>
+                <label asp-for="SupplierId" class="control-label"><b>Supplier/Vendor</b></label>
+                @Html.DropDownListFor(model => model.SupplierId, (SelectList)ViewBag.Supplier, "-- Select Material --", new { @class = "form-control" })
+                <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
@@ -27,49 +27,57 @@
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
-                <label asp-for="UnitOfMeasure" class="control-label"><b>Unit Of Measure</b></label>
-                <input asp-for="UnitOfMeasure" id="unitOfMeasure" class="form-control" readonly />
-                <span asp-validation-for="UnitOfMeasure" class="text-danger"></span>
-            </div>
-            <br />
-            <div class="form-group">
-                <label asp-for="UnitPrice" class="control-label"><b>Unit Price</b></label>
-                <input asp-for="UnitPrice" id="unitPrice" class="form-control" style="width: 30%;" />
-                <span asp-validation-for="UnitPrice" class="text-danger"></span>
+                <label asp-for="MaterialId" class="control-label"><b>Materials</b></label>
+                @Html.DropDownListFor(model => model.MaterialId, (SelectList)ViewBag.Materials, "-- Select Material --", new { @class = "form-control" })
+                <span asp-validation-for="MaterialId" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
-                <label asp-for="Date" class="control-label"><b>Date</b></label>
-                <input asp-for="Date" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" type="datetime-local" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label asp-for="UnitPrice" class="control-label"><b>Unit Price</b></label>
+                        <div class="input-group">
+                            <input asp-for="UnitPrice" id="unitPrice" class="form-control" />
+                            <span><b id="unitOfMeasureText" style="display: none;"> /</b><span id="unitOfMeasureDisplay">@Model?.UnitOfMeasure</span></span>
+                            <input type="hidden" id="unitOfMeasure" name="UnitOfMeasure" value="@Model?.UnitOfMeasure" />
+                        </div>
+                        <span asp-validation-for="UnitPrice" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
             <br />
-            <div class="form-group">
-                <label asp-for="Quantity" class="control-label"><b>Quantity</b></label>
-                <input asp-for="Quantity" id="quantity" class="form-control" style="width: 30%;" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+            <div class="form-group" style="width: 60%;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label asp-for="Quantity" class="control-label"><b>Quantity</b></label>
+                        <input asp-for="Quantity" id="quantity" class="form-control" />
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
             <br />
-            <div class="form-group">
-                <label asp-for="MaterialCost" class="control-label"><b>Material Cost</b></label>
-                <input asp-for="MaterialCost" id="materialCost" class="form-control" style="width: 30%;" readonly />
-                <span asp-validation-for="MaterialCost" class="text-danger"></span>
+            <div class="form-group" style="width: 60%;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label asp-for="MaterialCost" class="control-label"><b>Material Cost</b></label>
+                        <input asp-for="MaterialCost" id="materialCost" class="form-control" readonly />
+                        <span asp-validation-for="MaterialCost" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
             <br />
-            <div class="form-group" style="width: 55%;">
-                <div class="d-flex align-items-center" style="margin-left: 10px;">
-                    <div class="mr-3">
-                        <label asp-for="DeliveryCharge" class="control-label"><b>Delivery Charge</b></label>
+            <div class="form-group" style="width: 60%;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label asp-for="DeliveryCharge" class="control-label"><b>Delivery Cost</b></label>
                         <input asp-for="DeliveryCharge" id="deliveryCharge" class="form-control" />
                         <span asp-validation-for="DeliveryCharge" class="text-danger"></span>
                     </div>
-                    <a href="#" id="calculate" class="btn btn-link" onclick="calculateTotal(event)"><b>Calculate</b></a>
+                    <div class="col-md-6">
+                        <label><b>Total Amount</b></label>
+                        <input asp-for="TotalAmount" id="totalAmount" class="form-control" readonly />
+                    </div>
                 </div>
-            </div>
-            <br/>
-            <div class="form-group" >
-                <label><b>Total Amount</b></label>
-                <input asp-for="TotalAmount" id="totalAmount" class="form-control" style="width: 30%;" readonly />
             </div>
             <br/>
             <div class="form-group">
@@ -88,12 +96,10 @@
 
         var materialCost = unitPrice * quantity;
         document.getElementById('materialCost').value = materialCost.toFixed(2);
+        updateTotalAmount();
     }
-    document.getElementById('unitPrice').addEventListener('input', updateMaterialCost);
-    document.getElementById('quantity').addEventListener('input', updateMaterialCost);
-
-    // Function to calculate TotalAmount and update the field
-    function calculateTotal(event) {
+    // Function to calculate TotalAmount and update the field automatically when DeliveryCharge is provided
+    function updateTotalAmount() {
         
         var materialCost = parseFloat(document.getElementById('materialCost').value) || 0;
         var deliveryCharge = parseFloat(document.getElementById('deliveryCharge').value) || 0;
@@ -101,7 +107,11 @@
         var totalAmount = materialCost + deliveryCharge;
         document.getElementById('totalAmount').value = totalAmount.toFixed(2);
     }
-    document.getElementById('calculate').addEventListener('click', calculateTotal);
+    document.getElementById('deliveryCharge').value = "0.00";
+
+    document.getElementById('unitPrice').addEventListener('input', updateMaterialCost);
+    document.getElementById('quantity').addEventListener('input', updateMaterialCost);
+    document.getElementById('deliveryCharge').addEventListener('input', updateTotalAmount);
 
     $('#MaterialId').change(function (e) {
         
@@ -114,7 +124,9 @@
                 data: { id: materialId },
                 success: function (response) {
                     // Update UnitOfMeasure and UnitPrice fields with the data from the server
+                    $('#unitOfMeasureDisplay').text(response.unitOfMeasure);
                     $('#unitOfMeasure').val(response.unitOfMeasure);
+                    $('#unitOfMeasureText').show();
                     $('#unitPrice').val(response.unitPrice);
 
                     // Trigger recalculation of MaterialCost
